--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,7 @@
 name = "topic-shift"
 version = "0.1.0"
 description = "This package extract topics and contents from lecture slides"
-authors = [
-    {name = "Linus Bierhoff",email = "linus.bierhoff@icloud.com"}
-]
+authors = [{ name = "Linus Bierhoff", email = "linus.bierhoff@icloud.com" }]
 readme = "README.md"
 requires-python = ">=3.13,<4.0.0"
 dependencies = [
@@ -14,7 +12,9 @@ dependencies = [
     "langgraph (>=1.0.1,<2.0.0)",
     "langchain-community (>=0.4.1,<0.5.0)",
     "langchain-openai (>=1.0.1,<2.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "requests (>=2.31.0,<3.0.0)",
+    "streamlit (>=1.51.0,<2.0.0)"
 ]
 
 [tool.poetry]
